prevent new carousel images from being cropped

--- a/mauros-portfolio-react/src/components/Projects/index.scss
+++ b/mauros-portfolio-react/src/components/Projects/index.scss
@@ -9,6 +9,11 @@
             max-height: 70vh;
             object-fit: cover;
         }
+
+        .slide img.contain-image {
+            object-fit: contain;
+            background: #000;
+        }
     }
 }
 
